plugins {
    id 'java'
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.runelite.net' }
}

def runeLiteVersion = 'latest.release'

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'com.google.code.gson:gson:2.10.1'
    testImplementation 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
}

test {
    useJUnitPlatform()
}

group = 'com.runeassist.flip'
version = '1.0.0'

tasks.withType(JavaCompile).configureEach {
    options.release.set(11)
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes('Plugin-Class': 'com.runeassist.flip.controller.RuneAssistPlugin')
    }
}
